fix overflow

--- a/src/LandingPage/LandingPage.css
+++ b/src/LandingPage/LandingPage.css
@@ -40,7 +40,6 @@
 }
 
 .LandingPage-social {
-  width: 100vw;
   margin-top: 30px;
   display: flex;
   align-items: center;
